--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    coreApp="true"
+    android:sharedUserId="android.uid.system"
     package="com.pratap.gplaystore" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -19,6 +22,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".Downloading">
+
         </activity>
 
         <service android:name=".App_Download"
