--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,21 +17,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
         </activity>
-        <activity android:name=".Downloading"></activity>
+        <activity android:name=".Downloading" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <service
             android:name=".App_Download"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <receiver
             android:name=".appinstallrcv"
@@ -46,7 +47,23 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".More_Activity"></activity>
+        <activity android:name=".More_Activity" />
+        <activity
+            android:name=".SearchResultsActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
+
+            <!-- to identify this activity as "searchable" -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
